<resources>
    <string name="app_name">Favorite Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="favorite_contacts">Favorite Contacts</string>
    <string name="anthony">Anthony   \n651-206-925</string>
    <string name="ethan">Ethan  \n651-111-1111</string>
    <string name="luke">Luke  \n762-485-5482</string>
    <string name="call1">Call</string>
    <string name="text1">Text</string>
    <string name="text2">Text</string>
    <string name="call2">Call</string>
    <string name="text3">Text</string>
    <string name="call3">Call</string>

    <string-array name="contactNames">
        <item>@string/anthony</item>
        <item>@string/ethan</item>
        <item>@string/luke</item>
    </string-array>

    <string-array name="phoneNumbers">
        <item>6512069285</item>
        <item>6511111111</item>
        <item>7624855482</item>
    </string-array>
</resources>
